--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <div class="profile-image-container">
     <div class="profile-image">
-        <img src="Image/photo.jpg" alt="Profile Photo">
+        <img src="photo.jpg" alt="Profile Photo">
     </div>
 </div>
         </div>
@@ -396,4 +396,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
