--- a/index.html
+++ b/index.html
@@ -363,6 +363,25 @@
                                 <svg class="icon-lg" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><line x1="2" y1="12" x2="22" y2="12"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/></svg>
                             </div>
                             <div>
+
+                                <section id="contact">
+  <h2>Contact Me</h2>
+  <form action="submit_form.php" method="POST">
+    <label for="name">Name:</label><br>
+    <input type="text" id="name" name="name" required><br><br>
+
+    <label for="email">Email:</label><br>
+    <input type="email" id="email" name="email" required><br><br>
+
+    <label for="message">Message:</label><br>
+    <textarea id="message" name="message" rows="5" required></textarea><br><br>
+
+    <button type="submit">Send Message</button>
+  </form>
+
+                                
+                                </section>
+
                                 <h3>Social Media</h3>
                                 <div class="social-icons">
                                     <a href="https://linkedin.com/in/alexjohnson" target="_blank" class="social-icon">
@@ -398,3 +417,4 @@
 </body>
 
 </html>
+
