--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <nav>
+  <a href="#home">Home</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+</nav>
+
     <!-- Header -->
     <header id="header">
         <div class="header-container">
@@ -417,4 +424,5 @@
 </body>
 
 </html>
+
 
